[package]
name = "test_case_adder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
once_cell = "1.19.0"
rayon = "1.10.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "chrono", "uuid", "postgres"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.9.1"
